# Datalab-JD

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  provenance.md  pyproject.toml
.github/workflows/: tests.yml
Hongyi_LeeDeepLearning/HW03/: Copy_of_HW03.ipynb
config/: config.yaml  pipeline.yaml
data/: api_jobs.sqlite3
data/clean_compat/: cleaned.parquet  data_quality_report.md  jd_market_report.md
data/clean_final/: cleaned.parquet  data_quality_report.md  jd_market_report.md  metrics.json
data/clean_sample/: cleaned.parquet  data_quality_report.md  jd_market_report.md
data/raw/: compat_test.csv  crawled_jobs.csv  liepin_jobs.csv  sample.csv
data/sample/: jobs_sample.csv
data/web_run/: cleaned.parquet  data_quality_report.md  jd_market_report.md  metrics.json
src/datalab/: __init__.py  clean.py  cleaning.py  config.py  exceptions.py  io.py  jd_features.py  logging_utils.py  metrics.py  report.py  skill_tags.py
src/datalab/api/: __init__.py  app.py  job_store.py
src/datalab/dashboard/: __init__.py  app.py
src/datalab/db/: __init__.py  __main__.py  build.py
src/datalab/jd/: __init__.py  analyze.py  crawl.py  oneclick.py
tests/: test_api.py  test_cleaning.py  test_config_validation.py  test_dashboard.py  test_duckdb_build.py  test_e2e_pipeline.py  test_io_and_pipeline.py  test_jd_analyze.py  test_jd_crawl.py  test_jd_features.py  test_jd_oneclick.py  test_metrics.py  test_skill_tags.py
